implementing object tracking drill down in route rule and option rule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40506

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteOptionRule/Templates/RouteOptionRuleGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RouteOptionRule/Templates/RouteOptionRuleGridTemplate.html
@@ -15,4 +15,7 @@
     <vr-datagridcolumn headertext="'Rule Type'" field="'RouteOptionRuleSettingsTypeName'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BeginEffectiveTime'" type="'LongDatetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'EED'" field="'Entity.EndEffectiveTime'" type="'LongDatetime'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
