--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/StyleDefinition/Templates/StyleDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/StyleDefinition/Templates/StyleDefinitionGridTemplate.html
@@ -8,4 +8,7 @@
              idfield="Entity.StyleDefinitionId">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.StyleDefinitionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
