--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/OrgChart/Templates/OrgChartGrid.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/OrgChart/Templates/OrgChartGrid.html
@@ -5,4 +5,7 @@
              menuactions="ctrl.menuActions"
              idfield="OrgChartId">
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
