--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRuleType/Templates/VRAlertRuleTypeGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertRuleType/Templates/VRAlertRuleTypeGridTemplate.html
@@ -8,4 +8,7 @@
              idfield="Entity.VRAlertRuleTypeId">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRAlertRuleTypeId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
