Export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40529

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/CustomerRoute/Templates/CustomerRouteGridTemplate.html
@@ -5,7 +5,7 @@
                  on-ready="onGridReady"
                  menuactions="gridMenuActions"
                  getrowstyle="getRowStyle"
-                 idfield="CustomerRouteDetailId">
+                 idfield="CustomerRouteDetailId" enableautoexport="true">
 
         <vr-datagridcolumn headertext="'Code'" field="'Entity.Code'" fixedwidth="100"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Customer'" field="'CustomerName'" disablesorting fixedwidth="200"></vr-datagridcolumn>
