--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/BlockedAttempts/Templates/BlockedAttemptsGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Directives/BlockedAttempts/Templates/BlockedAttemptsGridTemplate.html
@@ -5,7 +5,7 @@
                  pagingtype="'PagingOnScroll'"
                  menuactions="gridMenuActions"
                  defaultsortbyfieldname="'Entity.BlockedAttempts'"
-                 defaultsortdirection="'DESC'">
+                 defaultsortdirection="'DESC'" enableautoexport="true">
         <vr-datagridcolumn headertext="'Customer'" field="'CustomerName'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Sale Zone'" field="'SaleZoneName'" type="'Text'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Blocked Attempts'" field="'Entity.BlockedAttempts'" type="'Text'"></vr-datagridcolumn>
