Passed a normal-col-num to the directiveWrapper
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40536

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BusinessEntityDefinitionEditor/BusinessEntityDefinitionEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BusinessEntityDefinitionEditor/BusinessEntityDefinitionEditor.html
@@ -20,7 +20,12 @@
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
-                <vr-directivewrapper vr-loader="scopeModel.isLoadingDirective" ng-if="scopeModel.selectedSetingsTypeConfig != undefined" directive="scopeModel.selectedSetingsTypeConfig.Editor" on-ready="scopeModel.onSettingDirectiveReady"></vr-directivewrapper>
+                <vr-directivewrapper vr-loader="scopeModel.isLoadingDirective"
+                                     ng-if="scopeModel.selectedSetingsTypeConfig != undefined"
+                                     directive="scopeModel.selectedSetingsTypeConfig.Editor"
+                                     on-ready="scopeModel.onSettingDirectiveReady"
+                                     normal-col-num="4">
+                </vr-directivewrapper>
             </vr-tabs>
         </vr-form>
     </vr-modalbody>
