--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionGridTemplate.html
@@ -4,7 +4,7 @@
              menuactions="scopeModel.menuActions"
              datasource="scopeModel.billingTransactions" defaultsortbyfieldname="'Entity.TransactionTime'" defaultsortdirection="'DESC'" enableautoexport="true">
 
-    <vr-datagridcolumn headertext="'ID'" field="'Entity.AccountBillingTransactionId'" fixedwidth="'50'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" field="'DisplayId'" fixedwidth="'50'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Transaction Time'" field="'Entity.TransactionTime'" type="'Datetime'" fixedwidth="'120'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Account'" field="'AccountInfo.Name'" ng-show="ctrl.showAccount" widthfactor="4"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Transaction Type'" field="'TransactionTypeDescription'" widthfactor="2" fixedwidth="'120'"></vr-datagridcolumn>
