Editing date to datetime @BEParentChildRelationGridTemplate
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40553

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BEParentChildRelation/BEParentChildRelationEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Views/BEParentChildRelation/BEParentChildRelationEditor.html
@@ -21,11 +21,11 @@
                     <vr-row>
                         <vr-columns width="1/2row">
                             <span vr-loader="scopeModel.isBeginEffectiveDateLoading">
-                                <vr-datetimepicker type="date" value="scopeModel.beginEffectiveDate" label="BED" customvalidate="scopeModel.validateEffectiveDate()" isrequired></vr-datetimepicker>
+                                <vr-datetimepicker type="dateTime" value="scopeModel.beginEffectiveDate" label="BED" customvalidate="scopeModel.validateEffectiveDate()" isrequired></vr-datetimepicker>
                             </span>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker type="date" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
+                            <vr-datetimepicker type="dateTime" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
