--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BEParentChildRelation/BEParentChildRelationRuntime/Templates/BEParentChildRelationGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BEParentChildRelation/BEParentChildRelationRuntime/Templates/BEParentChildRelationGridTemplate.html
@@ -8,6 +8,6 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.BEParentChildRelationId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="scopeModel.ParentBENameHeaderText" field="'ParentBEName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="scopeModel.ChildBENameHeaderText" field="'ChildBEName'" type="'Text'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Date'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Datetime'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'EED'" field="'Entity.EED'" type="'Datetime'"></vr-datagridcolumn>
 </vr-datagrid>
