using longDateTime format in RecordSearchAnalyticReportRuntime
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40556

--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/AnalyticReport/RecordSearch/Templates/RecordSearchAnalyticReportRuntimeTemplates.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/AnalyticReport/RecordSearch/Templates/RecordSearchAnalyticReportRuntimeTemplates.html
@@ -18,7 +18,7 @@
             </vr-columns>
 
             <vr-columns colnum="6" haschildcolumns>
-                <vr-timerange on-ready="onTimeRangeDirectiveReady " width="1/3row" type="dateTime" from="fromDate" to="toDate" period="selectedPeriod" isrequired="false"></vr-timerange>
+                <vr-timerange on-ready="onTimeRangeDirectiveReady " width="1/3row" type="longDateTime" from="fromDate" to="toDate" period="selectedPeriod" isrequired="false"></vr-timerange>
             </vr-columns>
 
             <vr-columns width="normal">
