Adding AlertLevel  @DataAnalysis Notification Page
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40575

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/DataRecordAlertRuleTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/DataRecordAlertRuleTypeSettingsTemplate.html
@@ -18,11 +18,9 @@
         </vr-columns>
     </vr-row>
     <vr-row ng-show="scopeModel.selectedDataRecordType != undefined">
-        <vr-span>
-            <vr-notification-notificationtypesetting-selector on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady"
-                                                              vr-loader="scopeModel.isNotificationTypeSettingsSelectorLoading"
-                                                              isrequired="true" normal-col-num="6">
-            </vr-notification-notificationtypesetting-selector>
-        </vr-span>
+        <vr-notification-notificationtypesetting-selector on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady"
+                                                          isloading="scopeModel.isNotificationTypeSettingsSelectorLoading"
+                                                          isrequired="true" normal-col-num="6">
+        </vr-notification-notificationtypesetting-selector>
     </vr-row>
 </vr-tab>
