--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsSearchEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsSearchEditorTemplate.html
@@ -1,6 +1,4 @@
-﻿
-
-<!--<span ng-show="scopeModel.showBasicTab()">
+﻿<!--<span ng-show="scopeModel.showBasicTab()">
     <vr-columns colnum="2">
         <vr-textbox value="scopeModel.Text" label="Testing"></vr-textbox>
     </vr-columns>
