--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/NotificationTypeSettingsGridTemplate.html
@@ -1,6 +1,4 @@
-﻿
-
-<vr-row vr-loader="scopeModel.isLoading">
+﻿<vr-row vr-loader="scopeModel.isLoading">
     <vr-columns width="fullrow">
         <vr-datagrid on-ready="scopeModel.onGridReady"
                      datasource="scopeModel.vrNotifications"
@@ -9,10 +7,11 @@
                      idfield="Entity.VRNotificationId"
                      hidepaginginfo normalcell>
 
+            <vr-datagridcolumn headertext="'Alert Level'" tooltipfield="'AlertLevelDescription'" getcolor="scopeModel.getAlertLevelStyleColor" disablesorting="true" fixedwidth="'20'" invisibleheader></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'ID'" field="'Entity.VRNotificationId'" disablesorting="true" fixedwidth="'80'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Created'" field="'Entity.CreationTime'" type="'LongDatetime'" disablesorting="true" fixedwidth="'120'"></vr-datagridcolumn>
             <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'" disablesorting="true" widthfactor="'20'"></vr-datagridcolumn>
-            <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="getStatusColor" disablesorting="true" fixedwidth="'100'"></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Status'" field="'StatusDescription'" getcolor="scopeModel.getStatusColor" disablesorting="true" fixedwidth="'100'"></vr-datagridcolumn>
             <vr-datagridcolumn ng-repeat="column in scopeModel.columns" columnattributes="column"></vr-datagridcolumn>
         </vr-datagrid>
     </vr-columns>
