--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Views/InvoiceAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Views/InvoiceAccountEditor.html
@@ -1,15 +1,15 @@
-﻿<div vr-modalcontent ng-controller="WhS_AccountBalance_FinancialAccountEditorController" width="small" vr-loader="scopeModel.isLoading">
+﻿<div vr-modalcontent ng-controller="WhS_Invoice_InvoiceAccountEditorController" width="small" vr-loader="scopeModel.isLoading">
     <vr-modalbody>
-        <vr-form name="formFinancialAccountEditor">
+        <vr-form name="formInvoiceAccountEditor">
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row removeline >
-                        <span vr-disabled="scopeModel.disableAccountTypeAndBED">
-                            <vr-accountbalance-accounttype-selector on-ready="scopeModel.onFinancialAccountTypeSelectorReady" selectedvalues="scopeModel.selectedFinancialAccountType" onselectionchanged=" scopeModel.onFinancialAccountTypeSelectionChanged" normal-col-num="6" isrequired="true" customlabel="Financial Account Type"></vr-accountbalance-accounttype-selector>
+                        <span vr-disabled="scopeModel.disableInvoiceTypeAndBED">
+                            <vr-invoicetype-selector on-ready="scopeModel.onInvoiceTypeSelectorReady" selectedvalues="scopeModel.selectedInvoiceType" onselectionchanged=" scopeModel.onInvoiceTypeSelectionChanged" normal-col-num="6" isrequired="true" customlabel="Invoice Type"></vr-invoicetype-selector>
 
                         </span>
                     </vr-row>
-                    <vr-directivewrapper ng-if="scopeModel.financialAccountTypeRuntimeDirective != undefined" vr-loader="scopeModel.isLoadingDirective" directive="scopeModel.financialAccountTypeRuntimeDirective"
+                    <vr-directivewrapper ng-if="scopeModel.invoiceTypeRuntimeDirective != undefined" vr-loader="scopeModel.isLoadingDirective" directive="scopeModel.invoiceTypeRuntimeDirective"
                                          on-ready="scopeModel.onDirectiveReady" isrequired="true">
                     </vr-directivewrapper>
                 </vr-tab>
@@ -29,7 +29,7 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" formname="formFinancialAccountEditor" data-onclick="scopeModel.save"></vr-button>
+                <vr-button type="Save" formname="formInvoiceAccountEditor" data-onclick="scopeModel.save"></vr-button>
                 <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
             </div>
         </vr-actionbar>
