Adding onBeforeSelectionChange to AlertRule
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40583

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/DataRecordAlertRuleExtendedSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Directive/Templates/DataRecordAlertRuleExtendedSettingsTemplate.html
@@ -3,6 +3,7 @@
         <vr-columns width="1/2row">
             <vr-genericdata-datarecordtypefields-selector on-ready="scopeModel.onDataRecordFieldsSelectorReady"
                                                           selectedvalues="scopeModel.selectedDataRecordFields"
+                                                          onbeforeselectionchanged="scopeModel.onBeforeDataRecordFieldsSelectionChanged"
                                                           onselectionchanged="scopeModel.onDataRecordFieldsSelectionChanged"
                                                           onselectitem="scopeModel.onSelectDataRecordField"
                                                           ondeselectitem="scopeModel.onDeselectDataRecordField"
