Add Filters to Agent Number Management
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40608

--- a/CarrierPortal/Code/CP.Ringo.Web/CP_Ringo/Views/AgentNumbers/AgentNumbersManagement.html
+++ b/CarrierPortal/Code/CP.Ringo.Web/CP_Ringo/Views/AgentNumbers/AgentNumbersManagement.html
@@ -2,7 +2,20 @@
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
             <vr-row removeline>
-
+                <vr-columns width="normal">
+                    <vr-textbox label="Number" value="number">
+                    </vr-textbox>
+                </vr-columns>
+                <vr-columns width="normal">
+                    <vr-select label="Status"
+                               datasource="statuses"
+                               selectedvalues="selectedStatuses"
+                               datavaluefield="value"
+                               datatextfield="description"
+                               entityname="Status"
+                               ismultipleselection>
+                    </vr-select>
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
