--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/BalanceAlertRule/Templates/BalanceAlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/BalanceAlertRule/Templates/BalanceAlertRuleSettingsTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-tab header="'Settings'">
     <vr-row>
-        <vr-accountbalance-accounttype-selector normal-col-num="6" isrequired="true" on-ready="scopeModel.accountTypeSelectorReady"></vr-accountbalance-accounttype-selector>
+        <vr-accountbalance-accounttype-selector on-ready="scopeModel.accountTypeSelectorReady" normal-col-num="6" isrequired="true"></vr-accountbalance-accounttype-selector>
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
