--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader2/Templates/QueueItemHeader2Grid.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader2/Templates/QueueItemHeader2Grid.html
@@ -11,5 +11,6 @@
     <vr-datagridcolumn headertext="'Stage'" field="'StageName'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Error Message'" field="'Entity.ErrorMessage'" disablesorting expendablecolumn></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Last Updated Time'" field="'Entity.LastUpdatedTime'" type="'LongDatetime'" fixedwidth="'120'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'"></vr-datagridcolumn>
 </vr-datagrid>
