Add DID Synchronizer and Convertor
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40649

--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Account/Part/Runtime/Templates/AccountTypePartOrderDetailsRuntimeTemplate.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/Account/Part/Runtime/Templates/AccountTypePartOrderDetailsRuntimeTemplate.html
@@ -5,6 +5,7 @@
         </vr-columns>
         <vr-columns width="fullrow">
             <vr-datagrid datasource="ctrl.orderdetails" menuactions="ctrl.gridMenuActions" ondeleterow="ctrl.removeOrderDetail" norowhighlightonclick="true" hidegridmenu>
+                <vr-datagridcolumn headertext="'OrderId'" field="'Order Id'"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Charges'" field="'Charges'"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Payment'" field="'Payment'"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Contract Period'" field="'ContractPeriod'" type="'Number'"></vr-datagridcolumn>
