--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/BalanceAlertRule/Templates/BalanceAlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/BalanceAlertRule/Templates/BalanceAlertRuleSettingsTemplate.html
@@ -1,13 +1,15 @@
 ﻿<vr-tab header="'Settings'">
     <vr-row>
-        <vr-accountbalance-accounttype-selector on-ready="scopeModel.accountTypeSelectorReady" normal-col-num="6" isrequired="true"></vr-accountbalance-accounttype-selector>
+        <vr-accountbalance-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady" 
+                                                normal-col-num="6" isrequired="true">
+        </vr-accountbalance-accounttype-selector>
+        <vr-notification-notificationtypesetting-selector on-ready="scopeModel.onVRNotificationTypeSettingsSelectorReady" 
+                                                          isrequired="true" normal-col-num="6">
+        </vr-notification-notificationtypesetting-selector>
     </vr-row>
     <vr-row>
         <vr-columns width="1/2row">
             <vr-textbox value="scopeModel.thresholdExtensionType" label="Threshold Extension Type" isrequired="true" />
-        </vr-columns>
-        <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.actionExtensionType" label="Action Extension Type" isrequired="true" />
         </vr-columns>
     </vr-row>
 </vr-tab>
