--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRuleSettings/AlertRuleSettingsEditor.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertRuleSettings/AlertRuleSettingsEditor.html
@@ -3,7 +3,10 @@
         <vr-form name="formVRActionManagementEditor">
             <vr-tabs>
                 <vr-tab header="'Threshold'">
-                    <vr-notification-balancealertrule-threshold-selector on-ready="scopeModel.onVRBalanceAlertRuleThresholdDirectiveReady" normal-col-num="4"></vr-notification-balancealertrule-threshold-selector>
+                    <vr-row>
+                        <vr-notification-alertlevel-selector on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady" normal-col-num="4" isrequired="true"></vr-notification-alertlevel-selector>
+                        <vr-notification-balancealertrule-threshold-selector on-ready="scopeModel.onVRBalanceAlertRuleThresholdDirectiveReady" normal-col-num="4"></vr-notification-balancealertrule-threshold-selector>
+                    </vr-row>
                 </vr-tab>
                 <vr-tab header="'Actions'">
                     <vr-notification-vraction-management on-ready="scopeModel.onVRActionManagementDirectiveReady"></vr-notification-vraction-management>
