--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/BalanceAlertRule/Templates/PercentageBalanceAlertThresholdTemplate.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/MainExtensions/BalanceAlertRule/Templates/PercentageBalanceAlertThresholdTemplate.html
@@ -1,5 +1,3 @@
-﻿<vr-row>
-    <vr-columns width="1/3row">
-        <vr-textbox value="scopeModel.percentage" label="Percentage" type="number" isrequired="true"></vr-textbox>
-    </vr-columns>
-</vr-row>
+﻿<vr-columns colnum="{{PercentageThresholdCtrl.normalColNum}}">
+    <vr-textbox value="scopeModel.percentage" label="Percentage" type="number" isrequired="true"></vr-textbox>
+</vr-columns>
