Ali Ballouk: Refactored the UI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40661

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -10,7 +10,7 @@
     </div>
     <vr-row removeline="true">
         <vr-columns width="fullrow">
-            <div style="min-height: 500px; max-height: 700px;">
+            <div >
                 <vr-datagrid on-ready="onGridReady"
                              datasource="zoneItems"
                              loadmoredata="loadMoreData"
@@ -18,6 +18,7 @@
                              norowhighlightonclick="'true'"
                              hidegridmenu
                              getrowstyle="getRowStyle"
+                             maxheight="{{ratePlanGridCtrl.maxHeight}}"
                              isdynamicrowstyle="true">
 
                     <vr-datagridcolumn headertext="'Zone'" type="'Text'" widthfactor="19" disablesorting="true">
