fix rateplane grid mah-height by using screen resolution
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40675

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -18,7 +18,7 @@
                              norowhighlightonclick="'true'"
                              hidegridmenu
                              getrowstyle="getRowStyle"
-                             maxheight="{{ratePlanGridCtrl.maxHeight}}"
+                             maxheight="{{::ratePlanGridCtrl.maxHeight}}"
                              isdynamicrowstyle="true">
 
                     <vr-datagridcolumn headertext="'Zone'" type="'Text'" widthfactor="19" disablesorting="true">
