--- a/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/DID/Templates/DIDConvertorEditor.html
+++ b/Retail/Code/Retail.Zajil.Web/Retail_Zajil/Directives/MainExtensions/DID/Templates/DIDConvertorEditor.html
@@ -1,4 +1,11 @@
-﻿<vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" normal-col-num="6"></vr-common-currency-selector>
+﻿
+<vr-columns width="1/2row">
+    <vr-genericdata-businessentitydefinition-selector on-ready="scopeModel.onAccountDefinitionSelectorReady"
+                                                      customlabel="Account Definition"
+                                                      isrequired="true">
+    </vr-genericdata-businessentitydefinition-selector>
+</vr-columns>
+
 <vr-columns width="1/2row">
     <vr-textbox value="scopeModel.sourceIdColumn" label="Source Id Column" isrequired="true"></vr-textbox>
 </vr-columns>
@@ -6,5 +13,11 @@
     <vr-textbox value="scopeModel.accountColumn" label="Source Account Id Column" isrequired="true"></vr-textbox>
 </vr-columns>
 <vr-columns width="1/2row">
+    <vr-textbox value="scopeModel.didColumn" label="DID Number Column" isrequired="true"></vr-textbox>
+</vr-columns>
+<vr-columns width="1/2row">
     <vr-textbox value="scopeModel.bedColumn" label="BED Column" isrequired="true"></vr-textbox>
+</vr-columns>
+<vr-columns width="1/2row">
+    <vr-textbox value="scopeModel.internationalColumn" label="International Column" isrequired="true"></vr-textbox>
 </vr-columns>
