--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Templates/RatePlanGridTemplate.html
@@ -114,7 +114,7 @@
                         </div>
                     </vr-datagridcolumn>
 
-                    <vr-datagridcolumn headertext="'BED'" widthfactor="11" disablesorting="true">
+                    <vr-datagridcolumn headertext="'BED'" fixedwidth="100" disablesorting="true">
                         <span vr-disabled="{{dataItem.IsCountryEnded}} || {{dataItem.IsZonePendingClosed}}">
                             <span vr-disabled="true">
                                 <vr-datetimepicker type="date" value="dataItem.CurrentRateBED" ng-hide="dataItem.NewRate != null" customvalidate="dataItem.validateRateChangeDates()" disablefocus></vr-datetimepicker>
@@ -123,7 +123,7 @@
                         </span>
                     </vr-datagridcolumn>
 
-                    <vr-datagridcolumn headertext="'EED'" widthfactor="11" disablesorting="true">
+                    <vr-datagridcolumn headertext="'EED'" fixedwidth="100" disablesorting="true">
                         <span vr-disabled="{{dataItem.IsCountryEnded}} || {{dataItem.IsZonePendingClosed}}">
                             <span vr-disabled="dataItem.isSellingProductZone">
                                 <span vr-disabled="!dataItem.IsCurrentRateEditable">
